--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,7 +25,9 @@
       <a routerLink="">avicenna</a>
     </mat-toolbar>
     <!-- Add Content Here -->
-    <router-outlet></router-outlet>
+    <main style="padding: 1rem">
+      <router-outlet></router-outlet>
+    </main>
   </mat-sidenav-content>
 </mat-sidenav-container>
 
