--- a/src/app/pages/influence/influence.component.html
+++ b/src/app/pages/influence/influence.component.html
@@ -1,1 +1,61 @@
-<p>influence works!</p>
+<h1>Наследие</h1>
+<h2>Книга исцеления</h2>
+<p>
+  Написанный на арабском энциклопедический труд «Книга исцеления» («Китаб аш-Шифа») посвящён логике, физике, биологии,
+  психологии, геометрии, арифметике, музыке, астрономии, а также метафизике. «Книга знания» («Даниш-намэ») также
+  является энциклопедией.
+</p>
+
+<h2>Труды по медицине</h2>
+<section class="base-works">
+  <h3>Основные медицинские произведения Ибн Сины:</h3>
+  <ul>
+    <li>
+      <img src="assets/images/canons-of-medicine.png" alt="">
+      «Канон врачебной науки» (или Канон медицины, «Китаб ал-Канун фи-т-тибб») — сочинение энциклопедического характера,
+      в котором предписания античных медиков осмыслены и переработаны в соответствии с достижениями арабской медицины. В
+      «Каноне» Ибн Сина предположил, что заболевания могут вызываться какими-то мельчайшими существами. Он первый
+      обратил
+      внимание на заразность оспы, определил различие между холерой и чумой, описал проказу, отделив её от других
+      болезней, изучил ряд других заболеваний. Существует множество переводов «Канона врачебной науки» на латинский
+      язык.
+      В «Каноне» две книги из пяти посвящены описанию лекарственного сырья, лекарственных средств, способам их
+      изготовления и употребления. Из 2600 лекарственных средств, описанных в «Каноне», 1400 — растительного
+      происхождения.
+    </li>
+    <li>
+    <img src="assets/images/canona-first-page.png" alt="">
+      «Лекарственные средства» («Ал-Адвият ал калбия») — написан во время первого посещения Хамадана. В произведении
+      подробно приведены роль сердца в возникновении и проявлении пневмы, особенности диагностики и лечения заболеваний
+      сердца.
+    </li>
+    <li>
+      «Удаление вреда от разных манипуляций посредством исправлений и предупреждений ошибок» («Дафъ ал-мазорр ал куллия
+      ан ал-абдон ал инсония би-тадорик анвоъ хато ан-тадбир»).
+      «О пользе и вреде вина» («Сиёсат ал-бадан ва фазоил аш-шароб ва манофиъих ва мазорих») — самый короткий трактат
+      Ибн Сины.
+    </li>
+    <li>
+      «Поэма о медицине» («Урджуса фит-тиб»).
+      «Трактат о пульсе» («Рисолайи набзийа»).
+      «Мероприятия для путешественников» («Фи тадбир ал-мусофирин»).
+      «Трактат о сексуальной силе» («Рисола фил-л-бох») — описаны диагностика, профилактика и лечение сексуальных
+      нарушений.
+    </li>
+    <li>
+    <img src="assets/images/qonun-fit-tib.png" alt="">
+      «Трактат о уксусомёде» («Рисола фи-с-сиканджубин») — описаны приготовление и лечебное применение различных по
+      составу смесей уксуса и мёда.
+    </li>
+    <li>
+      «Трактат о цикории» («Рисола фил-хиндабо»).
+    </li>
+    <li>
+      «Кровеносные сосуды для кровопускания» («Рисола фил-урук ал-мафсуда»).
+    </li>
+    <li>
+      «Рисола-йи жудия» — описывается лечение заболеваний уха, желудка, зубов. Кроме этого, в нём описаны проблемы
+      гигиены. Некоторые исследователи оспаривают авторство Авиценны.
+    </li>
+  </ul>
+</section>
