--- a/src/app/pages/literature/literature.component.html
+++ b/src/app/pages/literature/literature.component.html
@@ -1,1 +1,70 @@
-<p>literature works!</p>
+<h1>
+  Литература
+</h1>
+<p>
+  Многие серьёзные научные работы Ибн Сина писал в виде поэм, используя четверостишия. В такой форме написаны «Трактат о
+  любви», «Трактат о птицах» и некоторые другие произведения. Есть среди его творчества и лирические стихотворные
+  произведения — четверостишия и рубаи.
+</p>
+
+<pre>
+'از قعر گل سیاه تا اوج زحل
+کردم همه مشکلات گیتی را حل
+بیرون جستم زقید هر مکر و حیل
+هر بند گشاده شد مگر بند اجل
+'
+От праха чёрного и до небесных тел
+Я тайны разгадал мудрейших слов и дел.
+Коварство я избег, распутал все узлы,
+Лишь узел смерти я распутать не сумел.
+
+</pre>
+<pre>
+Кто на земле блаженств не ищет, тот
+Их в небесах навечно обретёт.
+И ангелов у ног своих увидит,
+Кто отрешится от земных забот.
+
+</pre>
+<pre>
+Когда к невеждам ты идёшь высокомерным,
+Средь ложных мудрецов явись ослом примерным:
+Ослиных черт у них такое изобилье,
+Что тот, кто не осел, у них слывет неверным.
+
+</pre>
+<pre>
+Плохо, когда сожалеть о содеянном станешь,
+Прежде чем ты, одинокий, от мира устанешь.
+Делай сегодня то дело, что выполнить в силах,
+Ибо возможно, что завтра ты больше не встанешь.
+
+</pre>
+<pre>
+Мой друг с моим врагом сегодня рядом был.
+Не нужен сахар мне, что смешан с ядом был!
+С подобным другом впредь не должен я дружить:
+Беги от мотылька, когда он с гадом был!
+
+</pre>
+<pre>
+Кто на земле блаженств не ищет, тот
+Их в небесах навечно обретёт.
+И ангелов у ног своих увидит,
+Кто отрешится от земных забот.
+
+</pre>
+<p>
+  Основные литературные работы Ибн Сины — философская повесть-аллегория «Хай ибн Якзан», поэма из двадцати двустиший
+  «Птица», «Саламан и Абсаль». Эти произведения и рубаи повлияли на развитие арабской, иранской и тюркоязычной
+  литератур. В частности, классик ираноязычной поэзии XII века Омар Хайям называл Ибн Сину своим учителем.
+</p>
+<p>
+  Примечательно, что в конце этого произведения встречается фраза «уединись, как Бу Али», под которым автор
+  подразумевает Али ибн Абу Талиба (р.а.) – зятя Пророка Мухаммада (с.г.в.) и четвёртого праведного халифа. Тем самым
+  Авиценна призывает последовать примеру великого сподвижника Посланника Аллаха (с.г.в.).
+</p>
+<p>
+  Труды Ибн Сины оказали большое влияние на развитие арабской и персидской литературы. Известный поэт Омар Хайям даже
+  называл Авиценну своим учителем.
+</p>
