--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -1,1 +1,72 @@
-main works
+<h1 class="mat-display-2">Ибн Сина</h1>
+<p class="intro">
+  <img src="assets/images/avicenna.webp" alt="" class="avicenna-image">
+  Абу́ Али́ Хусе́йн ибн Абдулла́х ибн аль-Ха́сан ибн Али́ ибн Си́на (перс. ابو علی حسین بن عبدالله بن سینا — Abū
+  ‘Alī Husein ibn ‘Abdallāh ibn Sīnā), известный на Западе как Авице́нна (Афшана близ Бухары, 980 года — Хамадан, 18
+  июня 1037) — средневековый персидский учёный, философ и врач, представитель восточного аристотелизма.
+  Был придворным врачом саманидских эмиров и дейлемитских султанов, некоторое время был визирем в Хамадане.
+  Всего написал более 450 трудов в 29 областях науки, из которых до нас дошли только 274. Самый известный
+  и влиятельный философ-учёный средневекового исламского мира.
+</p>
+<p>
+  Его самые известные работы — это «Книга исцеления», философская и научная энциклопедия, и «Канон медицины»,
+  медицинская энциклопедия, которая стала стандартным медицинским текстом во многих средневековых университетах и
+  использовалась до 1650 года.
+</p>
+
+
+<h2>Биография</h2>
+
+<p>
+  Родился в семье исмаилита из Балха, переселившегося под Бухару. В действительности, точная дата рождения — как и
+  смерти (обычно указывается или просто месяц шабан, или первая пятница месяца Рамадан 428 года по лунной хиджре) —
+  неизвестна. Мальчик с раннего возраста проявлял исключительные способности и одарённость. Уже к десяти годам он знал
+  наизусть почти весь Коран. Затем его отправили изучать мусульманское законоведение в школу, где он был самым младшим.
+  Но вскоре даже самые взрослые из слушателей школы оценили ум и знания мальчика и приходили к нему советоваться, хотя
+  Хусейну только исполнилось 12 лет. Позже он изучал логику и философию, геометрию и астрономию под руководством
+  приехавшего в Бухару учёного Абу Абдаллаха Натили. С 14 лет юноша начал заниматься самостоятельно. И геометрия, и
+  астрономия, и музыка ему давались легко, пока он не познакомился с «Метафизикой» Аристотеля. В автобиографии он
+  упоминал, что несколько раз прочитал этот труд, но не смог понять его. Помогла в этом книга Аль-Фараби с комментариями
+  к «Метафизике».
+</p>
+<p>
+  В 16 лет Ибн Сину пригласили лечить самого эмира Бухары. В автобиографии Авиценна писал: «Я занялся изучением
+  медицины, пополняя чтение наблюдениями больных, что меня научило многим приёмам лечения, которые нельзя найти в
+  книгах».
+</p>
+<p>
+  Абу Али ибн Сина в 997 году переехал из Бухары в Хорезм, где прожил 15 лет до 1012 года. В 997—998 гг. Бируни вел
+  переписку с Ибн Синой по различным вопросам космогонии и физики, воплощенную в форме вопросов и ответов. В Ургенче Ибн
+  Сина посчастливилось работать в Академии Мамуна, где уже сформировалась передовая научная элита Среднего Востока. В их
+  числе были ученый-энциклопедист Абу Райхан Бируни, астроном и медик Абу Сахл Иса ибн Иахйа ал-Масихи, которому Ибн
+  Сина посвятил свой труд об измерении углов. Кроме этого среди ученых были медик Абу-л-Хайр ибн ал-Хаммар, Абу Наср ибн
+  Ирак — племянник хорезмшаха и др. Основы двух трудов, составивших славу Ибн Сины, «Канона врачебной науки» (Ал-Канун
+  фит-т-тибб) и «Книги исцеления» (Китаб аш-шифа) закладывались в Хорезме — в Ургенче. «Канон врачебной науки» был начат
+  в Хорезме в 1000 г., а закончен около 1020 г. В 1012 году Ибн Сина покинул Хорезм и направился в Хорасан.
+</p>
+<p>
+  В 1015—1024 гг. Ибн Сина жил в Хамадане, сочетая научную деятельность с весьма активным участием в политических и
+  государственных делах эмирата. За успешное лечение эмира Шамс ад-Давла он получил должность визира, но нажил себе
+  врагов в военных кругах. Эмир отклонил требование военных предать Ибн Сину казни, но принял решение сместить его с
+  занимаемой должности и выслать за пределы своих владений. Через сорок дней с эмиром случился очередной приступ
+  болезни, который заставил его отыскать учёного и вновь назначить своим министром.
+</p>
+<p>
+  После смерти эмира за попытку перейти на службу к правителю Исфахана на четыре месяца он был заточён в крепость.
+  Последние четырнадцать лет жизни (1023—1037) служил в Исфахане при дворе эмира Ала ад-Давла[en], где для него создали
+  благоприятные условия для научной деятельности. Он был главным врачом и советником эмира, сопровождал его даже в
+  военных походах. В течение этих лет Ибн Сина, подстёгиваемый критикой его стиля, обратился к изучению литературы и
+  филологии. Также продолжал плодотворную научную работу. Завершил «Канон врачебной науки». Многие рукописи трудов, в
+  том числе «Книга справедливости» («Китаб уль-инсаф») сгорели во время нападения на Исфахан газнийского войска. Во
+  время одного из военных походов правителя Исфахана у Ибн Сины открылась тяжёлая желудочная болезнь, от которой
+  вылечить себя он не смог. Умер Ибн Сина в июне 1037 года, перед смертью продиктовав завещание незнакомцу. В завещании
+  он дал указание отпустить всех своих рабов, наградив их, и раздать всё своё имущество беднякам.
+</p>
+<p>
+  Похоронили Авиценну в Хамадане у городской стены, а через восемь месяцев его прах перевезли в Исфахан и перезахоронили
+  в мавзолее эмира.
+</p>
+<p>
+  Ибн Сина был учёный, одержимый исследовательским духом и стремлением к энциклопедическому охвату всех современных
+  отраслей знаний. Философ отличался феноменальной памятью и остротой мысли.
+</p>
