--- a/src/app/pages/medicine/medicine.component.html
+++ b/src/app/pages/medicine/medicine.component.html
@@ -1,1 +1,73 @@
-<p>medicine works!</p>
+<h1>Медицина</h1>
+
+<p>
+  Многие труды Ибн Сины о признаках различных заболеваний пережили многие столетия и остаются актуальными и в наши дни.
+  В частности, он рассматривал симптом заболевания в комплексе с другими проявлениями болезней. Изучение всех имеющихся
+  симптомов, как полагал учёный, способствует определению верного диагноза и назначению лечебных процедур. К тому же
+  Авиценна разделил все кровеносные сосуды в теле человека на пульсирующие (то есть артерии) и находящиеся в покое
+  (вены).
+</p>
+<p>
+  В своём труде «Канон врачебной науки» он описал более 700 лекарственных веществ, рассмотрев их общие и целебные
+  свойства. Около 150 растений, описанных им, применяются и в современной медицине. Также в наиболее известном своём
+  трактате описывает признаки и процедуру лечения рака. Кроме того, Ибн Сина приводит симптомы вывихов, ожогов и мелких
+  ранений, а также способы вправления суставов, которые в западной медицине именуют «методом Авиценны». Именно он вывел
+  различия между холерой и чумой, а также описал проказу.
+</p>
+<p>
+  Работа «Канон врачебной науки» снискала для Ибн Сины мировую известность. Она отличается простотой описания болезней,
+  а также способов их лечения.
+</p>
+<p>
+  Большое внимание Авиценна уделял и профилактике болезней. Именно поэтому он призывал к соблюдению правил личной
+  гигиены, которые прописаны в его труде «О гигиене». Для поддержания чистоты своего тела Ибн Сина настаивал на
+  необходимости регулярно совершать омовение и остерегаться прикосновения к грязным предметам. В целях профилактики
+  болезней он также рекомендовал постоянно заниматься физкультурой, называя её важнейшим условием здоровья тела. Ибн
+  Сина описал физические упражнения для людей разных возрастов. Немаловажную роль для укрепления здоровья он отводил
+  режиму питания и сна.
+</p>
+<h2>
+  Психология Авиценны
+</h2>
+<p>
+  Большую роль учёный сыграл и в развитии психологической науки. Основная идея его воззрений – утверждение о зависимости
+  психологии человека от устройства его тела. Авиценна выделил 4 основных типа характера человека: горячий, холодный,
+  сухой и влажный. Эти виды в современной психологии соответствуют темпераментам.
+</p>
+<p>
+  Изучению эмоций также отводится немаловажная роль в трудах Ибн Сины. Их он рассматривал как оживляющие душу механизмы,
+  оказывающие влияние на тело человека. Эмоции, по его мнению, способны оказывать влияние на индивида, вызывая
+  определённые изменения. Именно Авиценна первым описал метод психодиагностики, характеризующийся учащением пульса при
+  воздействии внешних факторов. Он провёл и первые эксперименты по психологии эмоций. Суть опыта состояла в том, чтобы
+  кормить двух баранов одинаковой пищей. Но один из них питался в обычных условиях, а возле другого привязывали волка. В
+  результате эксперимента второй баран похудел и умер. Именно этот опыт стал подтверждением влияния эмоций на организм
+  человека.
+</p>
+<h2>
+  Политическая философия
+</h2>
+<p>
+  Избрание правителя в мусульманской общине после смерти Пророка Мухаммада (с.г.в.) раскололо умму на суннитов и шиитов.
+  Довольно-таки долгое время этот вопрос был «ахиллесовой пятой» в Арабском халифате и часто приводил к конфликтам. И
+  Ибн Сина не мог его обойти стороной.
+</p>
+
+<p>
+  По мнению величайшего мыслителя, избрание правителя в мусульманском мире должно стать результатом компромисса между
+  авторитетными людьми. Как считал учёный, властитель должен обладать следующими качествами: храбрость, наличие
+  организаторских способностей, знание религиозных канонов, справедливость. Если существующий правитель обладает всеми
+  указанными качествами, то подданным следует ему беспрекословно подчиняться, а если же он им не соответствует или
+  нарушает их, то данная обязанность снимается с людей.
+</p>
+<p>
+  Авиценна писал, что общество – это совокупность людей, имеющих свои уникальные особенности и умения. Любое общество
+  нуждается в сотрудничестве, в противном случае оно может увязнуть в смутах и нестабильности. Для того чтобы социум
+  развивался, он нуждается в надёжном владыке, который должен блюсти интересы всех слоёв населения и обладать должным
+  авторитетом. Если же обществу удастся прийти к компромиссу и избрать правителя, соответствующего всем необходимым
+  качествам, то тогда, как утверждал Авиценна, оно будет свободным от смут и мятежей.
+</p>
+<p>
+  Вклад Ибн Сины в мировую науку трудно переоценить, так как его труды, написанные 1000 лет назад, остаются актуальными
+  и в наши дни. Знаменитый учёный стал неотъемлемой частью Золотого века исламской мысли, который подарил миру множество
+  великих умов.
+</p>
