--- a/src/app/pages/philosophy/philosophy.component.html
+++ b/src/app/pages/philosophy/philosophy.component.html
@@ -1,1 +1,66 @@
-<p>philosophy works!</p>
+<h1>Философия</h1>
+<p>
+  В понимании предмета метафизики Ибн Сина следовал Аристотелю. Вслед за Аль-Фараби Ибн Сина различает возможно сущее,
+  существующее благодаря другому, и абсолютно необходимо сущее, существующее благодаря себе. Ибн Сина утверждает
+  совечность мира Творцу. Творение в вечности Ибн Сина объяснял с помощью неоплатонического понятия эманации,
+  обосновывая таким образом логический переход от первоначального единого к множественности тварного мира. Однако в
+  отличие от неоплатонизма он ограничивал процесс эманации миром небесных сфер, рассматривая материю не как конечный
+  результат нисхождения единого, а как необходимый элемент любого возможного бытия. Космос делится на три мира:
+  материальный мир, мир вечных несотворённых форм, и земной мир во всем его многообразии. Индивидуальная душа образует с
+  телом единую субстанцию, обеспечивающую целостное воскрешение человека; носителем философского мышления выступает
+  конкретное тело, предрасположенное к принятию разумной души. Абсолютная истина может быть постигнута посредством
+  интуитивного видения, которое предстаёт кульминацией процесса мышления.
+</p>
+<p>
+  К кругу мистических произведений Ибн Сины относятся «Книга о птицах», «Книга о любви», «Книга о сущности молитвы»,
+  «Книга о смысле паломничества», «Книга об избавлении от страха смерти», «Книга о предопределении».
+</p>
+<p>
+  Ибн Сина написал учебник «Логика» (1031 или 1035 г.). «Логика, — писал он, — есть наука, при помощи которой познаются
+  различные методы перехода от вещей, наличных в человеческом уме, к вещам, познание которых он стремится приобрести».
+  Ибн Сина был сторонником того взгляда, что логические категории и правила должны соответствовать вещам. Предмет
+  логики, говорил он, — решение проблемы общего и отдельного. Общее существует в самих вещах, но оно существует также до
+  вещи и после вещи. Мышление — это познание общего. В его теории познания нельзя не видеть элементов сенсуалистической
+  тенденции, поскольку без чувственных познаний, по Ибн Сине, невозможен познавательный процесс.
+</p>
+<p>
+  Логикой Ибн Сина называл науку о формах мышления. Она входит в состав философии наряду с физикой (учении о Бытии) и
+  математикой. Логика состоит из четырёх частей: понятие, суждение, умозаключение и доказательство.
+</p>
+<p>
+  Ибн Сина исследовал взаимоотношение субъекта и предиката в суждении,
+  конъюнктивные суждения, взаимозависимость категорических и условных суждений.
+  Ему было известно выражение импликации через дизъюнкцию и отрицание по формуле:
+  где → — знак импликации, соответствующий союзу «если…, то…» в обычной речи, ≡ — знак эквивалентности, ∨ — знак
+  дизъюнкции (союз «или» в соединительно-разделительном смысле), ¬ p — отрицание p.
+</p>
+<h2>Критика</h2>
+<p>
+</p>
+Вокруг философских взглядов Авиценны велась острая борьба между сторонниками и противниками его идей.
+<p>
+  Суфии резко выступали против рационализма Ибн Сины, ставя его философии в вину то, что она не даёт возможности
+  человеку приблизиться к Богу. Тем не менее многие из суфиев переняли философский метод Авиценны и его идею об
+  эволюционном характере ступеней эманации по линии восхождения.
+</p>
+<p>
+  Мухаммад Аль-Газали в своей известной книге «Опровержение философов» пытался опровергнуть философию Ибн Сины во всех
+  аспектах. Выступал против учения об изначальности и вечности мира и его атрибутов, поскольку это, по мнению
+  Аль-Газали, приводит к дуализму, который противоречит монотеизму ислама. Аль-Газали отвергает также принцип эманации,
+  согласно которому Бог творит мир не по собственной воле, а в силу естественной необходимости. Не разделял он также
+  выдвинутых Ибн Синой идей о причинности и невозможность телесного воскресения.
+</p>
+<p>
+  Позже линию Аль-Газали продолжили мыслители XII века Мухаммад Шахрастани в своём труде «Китаб аль-Мусараа» и Фахруддин
+  Рази. С защитой идей восточного перипатетизма в XII веке выступил Ибн Рушд в своей книге «Опровержение опровержения».
+  Впоследствии взгляды Ибн Сины защищал Насир ад-Дин ат-Туси.
+</p>
+<h2>Психология</h2>
+<p>
+  Ибн Сина разработал также своё собственное учение о темпераменте и характере человека. Согласно его учению натура
+  человека делится на четыре простых вида: горячая, холодная, влажная и сухая (что в современной психологии
+  соответствует четырём темпераментам). Эти натуры не являются стабильными, а изменяются под воздействием внутренних и
+  внешних факторов, таких как метеорологические условия и смена времён года. Изменения в жидкостях организма также могут
+  корректировать натуру в соответствующем направлении. Кроме простых натур, Авиценна различал ещё четыре сложных натуры
+  в зависимости от превалирования одной из четырёх жидкостей организма (крови, слизи, жёлтой или чёрной жёлчи).[28]
+</p>
