--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,10 +8,18 @@
 
 .sidenav .mat-toolbar {
   background: inherit;
+  cursor: pointer;
 }
 
 .mat-toolbar.mat-primary {
   position: sticky;
   top: 0;
   z-index: 1;
+
+  mat-icon {
+    cursor: pointer;
+    zoom: 1.5;
+    margin-inline-end: .5rem;
+    transition: 1s;
+  }
 }
