--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
                [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
                [mode]="(isHandset$ | async) ? 'over' : 'side'"
                [opened]="(isHandset$ | async) === false">
-    <mat-toolbar>Menu</mat-toolbar>
+    <mat-toolbar (click)="drawer.toggle()">Menu</mat-toolbar>
     <mat-nav-list>
       <a mat-list-item routerLink="main">Биография</a>
       <a mat-list-item routerLink="influence">Наследие</a>
@@ -22,6 +22,7 @@
         *ngIf="isHandset$ | async">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
+      <mat-icon *ngIf="!drawer.opened && getScreenWidth>800" (click)="drawer.toggle()">menu</mat-icon>
       <a routerLink="">avicenna</a>
     </mat-toolbar>
     <!-- Add Content Here -->
